--- a/files/assets/style/main.scss
+++ b/files/assets/style/main.scss
@@ -164,38 +164,29 @@ body {
 }
 
 // Scrollbar
-/* width */
-::-webkit-scrollbar {
-	width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-	background: var(--gray-200);
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-	background: var(--secondary); 
-	border-radius: 1em;
-	border: 2px transparent solid;
-	background-clip: content-box;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-	background: var(--primary); 
+@media(min-width: 768px){
+	/* width */
+	::-webkit-scrollbar {
+		width: 10px;
+	}
 	
-}
-
-
-.container, #submitform {
-	grid-column: 2;
-}
-
-@media (min-width: 1200px) {
-	.container{
-		max-width: 1240px;
+	/* Track */
+	::-webkit-scrollbar-track {
+		background: var(--gray-200);
+	}
+	
+	/* Handle */
+	::-webkit-scrollbar-thumb {
+		background: var(--secondary); 
+		border-radius: 1em;
+		border: 2px transparent solid;
+		background-clip: content-box;
+	}
+	
+	/* Handle on hover */
+	::-webkit-scrollbar-thumb:hover {
+		background: var(--primary); 
+		
 	}
 }
 
